[project]
name = "SPARK1"
version = "0.1.1"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dash>=2.18.1",
    "gunicorn>=23.0.0",
    "dash-table>=5.0.0",
    "flask>=3.1.2",
    "flask-sqlalchemy>=3.1.1",
    "msal>=1.34.0",
    "pandas>=2.3.3",
    "pyjwt>=2.10.1",
    "pymysql>=1.1.2",
    "sqlalchemy>=2.0.44",
    "werkzeug>=3.1.3",
    "cryptography>=44.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
